--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="Скачки" Height="450" Width="800" FontFamily="Cascadia Code" FontSize="14" Icon="1/1.ico">
     <Grid>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"></Border>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="75"/>
@@ -18,6 +19,7 @@
             <Frame Grid.Row="1" Name="MainFrame"  ContentRendered="MainFrame_ContentRendered" NavigationUIVisibility="Hidden"></Frame>
             <Button Foreground="Azure" Background="BlueViolet" Content="Назад" Name="BtnBack"  HorizontalAlignment="Right"  Click="BtnBack_Click"></Button>
             <Grid Background="BlueViolet" Panel.ZIndex="-2"></Grid>
+            <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"></Border>
         </Grid>
     </Grid>
 </Window>
