--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -16,8 +16,8 @@
             </Grid.RowDefinitions>
             <Image Source="1/1.png" HorizontalAlignment="Left" Width="75" Margin="0,0,0,2"/>
             <TextBlock Foreground="Azure" Text="Скачки" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
-            <Frame Grid.Row="1" Name="MainFrame"  ContentRendered="MainFrame_ContentRendered" NavigationUIVisibility="Hidden"></Frame>
-            <Button Foreground="Azure" Background="BlueViolet" Content="Назад" Name="BtnBack"  HorizontalAlignment="Right"  Click="BtnBack_Click"></Button>
+            <Frame Grid.Row="1" Name="MainFrame"   NavigationUIVisibility="Hidden"></Frame>
+            <Button Foreground="Azure" Background="BlueViolet" Content="Назад" Name="BtnBack"  HorizontalAlignment="Right"  ></Button>
             <Grid Background="BlueViolet" Panel.ZIndex="-2"></Grid>
             <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"></Border>
         </Grid>
