--- a/WpfApp1/1.xaml
+++ b/WpfApp1/1.xaml
@@ -9,6 +9,14 @@
       Title="_1">
 
     <Grid>
-        
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Button Background="White" Foreground="Black" Content="Список лошадей" Name="listHorse"  HorizontalAlignment="Center" Margin="0,-120,0,0" Width="120" Height="40" Click="btn1"></Button>
+        </Border>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Button Background="White" Foreground="Black" Content="Соренования" Name="cmp"  HorizontalAlignment="Center" Margin="0,0,0,0" Width="120" Height="40" Click="btn2"></Button>
+        </Border>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Button Background="White" Foreground="Black" Content="Что-то ещё" Name="name"  HorizontalAlignment="Center" Margin="0,120,0,0" Width="120" Height="40" Click="btn3"></Button>
+        </Border>
     </Grid>
 </Page>
