--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -17,18 +17,13 @@
             <Image Source="1/1.png" HorizontalAlignment="Left" Width="75" Margin="0,0,0,2"/>
             <TextBlock Foreground="Azure" Text="Скачки" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
             <Frame Grid.Row="1" Name="MainFrame"   NavigationUIVisibility="Hidden"></Frame>
-            <Button Foreground="Azure" Background="BlueViolet" Content="Назад" Name="BtnBack"  HorizontalAlignment="Right"  ></Button>
+            <Button Foreground="Azure" Background="BlueViolet" Content="Назад" Name="BtnBack"  HorizontalAlignment="Right"  Click="btnClickBack" Width="75"></Button>
             <Grid Background="BlueViolet" Panel.ZIndex="-2"></Grid>
+            <Grid Grid.Row="1">
+                <Image Source="1/3.png" Stretch="Fill"/>
+            </Grid>
+            <Grid Background="Black" Grid.Row="2"></Grid>
             <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"></Border>
         </Grid>
-        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Button Background="White" Foreground="Black" Content="Список лошадей" Name="listHorse"  HorizontalAlignment="Center" Margin="0,-120,0,0" Width="120" Height="40"></Button>
-        </Border>
-        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Button Background="White" Foreground="Black" Content="Соренования" Name="cmp"  HorizontalAlignment="Center" Margin="0,0,0,0" Width="120" Height="40"></Button>
-        </Border>
-        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Button Background="White" Foreground="Black" Content="Что-то ещё" Name="name"  HorizontalAlignment="Center" Margin="0,120,0,0" Width="120" Height="40"></Button>
-        </Border>
     </Grid>
 </Window>
