--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -6,6 +6,9 @@
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
         Title="Скачки" Height="450" Width="800" FontFamily="Cascadia Code" FontSize="14" Icon="1/1.ico">
+    <Window.Background>
+        <ImageBrush ImageSource="1/3.png"/>
+    </Window.Background>
     <Grid>
         <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"></Border>
         <Grid>
@@ -16,12 +19,9 @@
             </Grid.RowDefinitions>
             <Image Source="1/1.png" HorizontalAlignment="Left" Width="75" Margin="0,0,0,2"/>
             <TextBlock Foreground="Azure" Text="Скачки" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
-            <Frame Grid.Row="1" Name="MainFrame"   NavigationUIVisibility="Hidden"></Frame>
-            <Button Foreground="Azure" Background="BlueViolet" Content="Назад" Name="BtnBack"  HorizontalAlignment="Right"  Click="btnClickBack" Width="75"></Button>
+            <Frame Grid.Row="1" Name="MainFrame" NavigationUIVisibility="Hidden"></Frame>
+            <Button Foreground="Azure" Background="BlueViolet" Content="Назад" Name="BtnBack"  HorizontalAlignment="Right"  Click="btnClickBack" Width="75" Cursor="Hand"/>
             <Grid Background="BlueViolet" Panel.ZIndex="-2"></Grid>
-            <Grid Grid.Row="1">
-                <Image Source="1/3.png" Stretch="Fill"/>
-            </Grid>
             <Grid Background="Black" Grid.Row="2"></Grid>
             <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"></Border>
         </Grid>
