--- a/WpfApp1/2.xaml
+++ b/WpfApp1/2.xaml
@@ -16,7 +16,7 @@
         <DataGrid x:Name="DGridhorses" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Кличка лошади" Binding="{Binding name_horse}" Width="*"></DataGridTextColumn>
-                <!--<DataGridTextColumn Header="Владелец" Binding="{Binding id_owner}" Width="*"></DataGridTextColumn>-->
+                <!-- Тут хосу имя из другой таблицы вытащить по айдишнику (связям) <DataGridTextColumn Header="Владелец" Binding="{Binding id_owner}" Width="*"></DataGridTextColumn>-->
                 <DataGridTextColumn Header="Пол" Binding="{Binding sex}" Width="*"></DataGridTextColumn>
                 <DataGridTextColumn Header="Возраст" Binding="{Binding age}" Width="*"></DataGridTextColumn>
                 <DataGridTemplateColumn Width="auto">
