--- a/WpfApp1/4.xaml
+++ b/WpfApp1/4.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:WpfApp1"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="_4">
+      Title="Ретинги жокеев" FontFamily="Cascadia Code" FontSize="14">
 
     <Grid>
         
