--- a/WpfApp1/add.xaml
+++ b/WpfApp1/add.xaml
@@ -27,12 +27,16 @@
         <TextBlock Foreground="White" Text="Владелец" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center"></TextBlock>
         <TextBlock Foreground="White" Text="Выбрать существующего владельца" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top"></TextBlock>
         <TextBlock Foreground="White" Text="Нового владельца" Grid.Row="3" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Top"></TextBlock>
+
+        <TextBox Text="{Binding name_horse}" Height="40" Width="325" MaxLength="100" Grid.Column="1" HorizontalAlignment="Left"></TextBox>
         
-        <TextBox Height="40" Width="325" MaxLength="100" Grid.Column="1" HorizontalAlignment="Left"></TextBox>
-        <TextBox Height="40" Width="325" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left"></TextBox>
+        <RadioButton Foreground="Black" IsChecked="{Binding sex}" Tag="муж" Content="муж" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Width="50" Margin="65,0,210,0"></RadioButton>
+        <RadioButton Foreground="Black" IsChecked="{Binding sex}" Tag="жен" Content="жен" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Width="50" Margin="210,0,65,0"></RadioButton>
+
+        <TextBox Text="{Binding age}" Height="40" Width="325" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left"></TextBox>
 
         <Button Click="btn7" Cursor="Hand" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Background="White" Foreground="Black" Content="Добавить" Name="add2" Height="40" Width="100" Grid.Column="2" Grid.Row="3" HorizontalAlignment="Center"></Button>
-        <TextBox Height="40" Width="325" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left"></TextBox>
+        <ComboBox SelectedItem="{Binding id_owner}" x:Name="ComboOwners" DisplayMemberPath="id_owner" Height="40" Width="325" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left"></ComboBox>
 
         <Button Click="btn8" Cursor="Hand" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Background="White" Foreground="Black" Content="Сохранить" Name="save" Height="40" Width="100" HorizontalAlignment="Center" Grid.Row="4" Grid.Column="2" VerticalAlignment="Top"></Button>
     </Grid>
