--- a/WpfApp1/add.xaml
+++ b/WpfApp1/add.xaml
@@ -36,7 +36,7 @@
         <TextBox Text="{Binding age}" Height="40" Width="325" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left"></TextBox>
 
         <Button Click="btn7" Cursor="Hand" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Background="White" Foreground="Black" Content="Добавить" Name="add2" Height="40" Width="100" Grid.Column="2" Grid.Row="3" HorizontalAlignment="Center"></Button>
-        <ComboBox SelectedItem="{Binding id_owner}" x:Name="ComboOwners" DisplayMemberPath="id_owner" Height="40" Width="325" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left"></ComboBox>
+        <ComboBox SelectedItem="{Binding horse_owner}" x:Name="ComboOwners" DisplayMemberPath="name_owner" Height="40" Width="325" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left"></ComboBox>
 
         <Button Click="btn8" Cursor="Hand" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Background="White" Foreground="Black" Content="Сохранить" Name="save" Height="40" Width="100" HorizontalAlignment="Center" Grid.Row="4" Grid.Column="2" VerticalAlignment="Top"></Button>
     </Grid>
