--- a/WpfApp1/add2.xaml
+++ b/WpfApp1/add2.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:WpfApp1"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Добавление владельца" FontFamily="Cascadia Code" FontSize="14" Foreground="Black">
+      Title="Добавление владельца" FontFamily="Cascadia Code" FontSize="14" Foreground="White">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -30,6 +30,7 @@
         <TextBox Text="{Binding phone}" Height="40" Width="325" MaxLength="100" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left"></TextBox>
 
         <Button Click="btn9" Cursor="Hand" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Background="White" Foreground="Black" Content="Сохранить" Name="save1" Height="40" Width="100" HorizontalAlignment="Center" Grid.Row="4" Grid.Column="2" VerticalAlignment="Top"></Button>
+        <Button Click="btn10" Cursor="Hand" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Background="White" Foreground="Black" Content="Данные о владельцах" Name="db" Height="40" Width="170" HorizontalAlignment="Center" Grid.Row="3" Grid.Column="2" VerticalAlignment="Top"></Button>
 
     </Grid>
 </Page>
