--- a/WpfApp1/3.xaml
+++ b/WpfApp1/3.xaml
@@ -9,6 +9,30 @@
       Title="Соренования" FontFamily="Cascadia Code" FontSize="14">
 
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+        <DataGrid x:Name="DGridcomp" AutoGenerateColumns="False" IsReadOnly="True">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Наименование" Binding="{Binding name_competition}" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Дата" Binding="{Binding date_competition}" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Время" Binding="{Binding time_competition}" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Ипподром" Binding="{Binding hippodrome}" Width="*"></DataGridTextColumn>
+                <DataGridTemplateColumn Width="auto">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                                <Button Content="Редактировать" Name="btnEdit" Click="btn13"/>
+                            </Border>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <Button Grid.Row="1" Content="Добавить" Name="btn144" Width="120" Click="btn14" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Margin="50,5,632,5"/>
+        <Button Grid.Row="1" Content="Удалить" Name="btn155" Width="120" Click="btn15" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Margin="-50,5,-632,5"/>
+        <Button Grid.Row="1" Content="Заезды" Name="btn166" Width="120" Click="btn16" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Margin="340,5,340,5"/>
     </Grid>
 </Page>
