--- a/WpfApp1/add.xaml
+++ b/WpfApp1/add.xaml
@@ -28,14 +28,14 @@
         <TextBlock Text="Выбрать существующего владельца" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top"></TextBlock>
         <TextBlock Text="Нового владельца" Grid.Row="3" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Top"></TextBlock>
 
-        <TextBox Text="{Binding name_horse}" Height="40" Width="325" MaxLength="100" Grid.Column="1" HorizontalAlignment="Left"></TextBox>
-        <TextBox Text="{Binding sex}" Height="40" Width="110" MaxLength="3" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left"></TextBox>
+        <TextBox Text="{Binding name_horse}" Width="325" MaxLength="100" Grid.Column="1" HorizontalAlignment="Left"></TextBox>
+        <TextBox Text="{Binding sex}" Width="110" MaxLength="3" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left"></TextBox>
 
-        <TextBox Text="{Binding age}" Height="40" Width="325" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left"></TextBox>
+        <TextBox Text="{Binding age}" Width="325" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left"></TextBox>
 
-        <Button Click="btn7" Cursor="Hand" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Background="White" Foreground="Black" Content="Добавить" Name="add2" Height="40" Width="100" Grid.Column="2" Grid.Row="3" HorizontalAlignment="Center"></Button>
-        <ComboBox SelectedItem="{Binding horse_owner}" x:Name="ComboOwners" DisplayMemberPath="name_owner" Height="40" Width="325" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left"></ComboBox>
+        <Button Click="btn7" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Content="Добавить" Name="add2" Width="100" Grid.Column="2" Grid.Row="3" HorizontalAlignment="Center"></Button>
+        <ComboBox SelectedItem="{Binding horse_owner}" x:Name="ComboOwners" DisplayMemberPath="name_owner" Width="325" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left"></ComboBox>
 
-        <Button Click="btn8" Cursor="Hand" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Background="White" Foreground="Black" Content="Сохранить" Name="save" Height="40" Width="100" HorizontalAlignment="Center" Grid.Row="4" Grid.Column="2" VerticalAlignment="Top"></Button>
+        <Button Click="btn8" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Content="Сохранить" Name="save" Width="100" HorizontalAlignment="Center" Grid.Row="4" Grid.Column="2" VerticalAlignment="Top"></Button>
     </Grid>
 </Page>
