--- a/WpfApp1/3.xaml
+++ b/WpfApp1/3.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:WpfApp1"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Соренования" FontFamily="Cascadia Code" FontSize="14" Cursor="">
+      Title="Соренования" FontFamily="Cascadia Code" FontSize="14" IsVisibleChanged="Page_IsVisibleChanged">
 
     <Grid>
         <Grid.RowDefinitions>
