--- a/WpfApp1/rating.xaml
+++ b/WpfApp1/rating.xaml
@@ -6,9 +6,33 @@
       xmlns:local="clr-namespace:WpfApp1"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="rating">
+      Title="Жокеи" FontFamily="Cascadia Code" FontSize="14" IsVisibleChanged="Page_IsVisibleChanged">
 
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+        <DataGrid x:Name="DGridjockey" AutoGenerateColumns="False" IsReadOnly="True">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Жокей" Binding="{Binding name_jockey}" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Адрес" Binding="{Binding adress}" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Возраст" Binding="{Binding age}" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Рейтинг" Binding="{Binding rating}" Width="*"></DataGridTextColumn>
+                <DataGridTemplateColumn Width="auto">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                                <Button Content="Редактировать" Name="btnEdit" Click="btn23"/>
+                            </Border>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <Button Grid.Row="1" Content="Добавить" Name="btn144" Click="btn20" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Margin="50,5,632,5"/>
+        <Button Grid.Row="1" Content="Удалить" Name="btn155" Click="btn21" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Margin="632,5,50,5" Cursor="Hand"/>
+
     </Grid>
 </Page>
