--- a/WpfApp1/zaezd.xaml
+++ b/WpfApp1/zaezd.xaml
@@ -6,9 +6,35 @@
       xmlns:local="clr-namespace:WpfApp1"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="zaezd">
+      Title="Заезды" FontFamily="Cascadia Code" FontSize="14">
 
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+        <DataGrid x:Name="DGridpart" AutoGenerateColumns="False" IsReadOnly="True">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Номер заезда" Binding="{Binding id_check_in}" Width="93"></DataGridTextColumn>
+                <DataGridTextColumn Header="Наименование состязания" Binding="{Binding name_comp1}" Width="171"></DataGridTextColumn>
+                <DataGridTextColumn Header="Жокей" Binding="{Binding name_j1}" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Лошадь" Binding="{Binding name_h1}" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Время заезда" Binding="{Binding time_participants}" Width="45"></DataGridTextColumn>
+                <DataGridTextColumn Header="Занятое место" Binding="{Binding place_participants}" Width="105"></DataGridTextColumn>
+                <!--<DataGridTemplateColumn Width="auto">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                                <Button Content="Редактировать" Name="btnEdit" Click="btn25"/>
+                            </Border>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>-->
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <!--<Button Grid.Row="1" Content="Добавить" Name="btn5" Click="btn26" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Margin="50,5,632,5"/>
+        <Button Grid.Row="1"  Content="Удалить" Name="btn6" Click="btn27" MouseEnter="Button_MouseEnter" MouseLeave="Button_MouseLeave" Margin="632,5,50,5"/>-->
+
     </Grid>
 </Page>
